# mixxx

./: CMakeLists.txt  CMakeLists.txt.bak  CMakeLists_bottom.tmp  CMakeLists_new.tmp  CMakeLists_top.tmp  apply_all_fixes.py  check_nesting.py  cm_middle.txt  cm_start.txt  cmake_block.tmp  cmake_block_fix.tmp  code_review.py  final_lowercase.py  find_mismatch_v2.py  fix_cm_v12.py  fix_cmake.py  fix_cmake_final.py  fix_cmake_final_v2.py  fix_cmake_v2.py  fix_cmake_v3.py  fix_cmake_v4.py  fix_cmake_v5.py  fix_cmdline.py  fix_cpack.py  fix_cpp.py  fix_final_v2.py  fix_h.py  fix_main.py  fix_mainwindow.py  fix_metainfo.py  fix_options_order.py  fix_qm_dsp.py  fix_qml_proxy.py  fix_syntax.py  manual_format_v2.py  move_logic.py  test.cmake  test_math_standalone.cpp  test_qt_vars.cmake
.github/workflows/: benchmark.yml  build.yml  checks.yml  develop.yml  flatpak.yml  pre-commit.yml  (+1 more)
lib/: CMakeLists.txt
lib/qm-dsp/: m_pi_fallback.h
lib/qm-dsp/base/: KaiserWindow.h  SincWindow.cpp  Window.h
lib/qm-dsp/dsp/chromagram/: ConstantQ.cpp
lib/qm-dsp/dsp/phasevocoder/: PhaseVocoder.cpp
lib/qm-dsp/dsp/tempotracking/: TempoTrackV2.cpp
lib/qm-dsp/dsp/tonal/: ChangeDetectionFunction.cpp  TonalEstimator.cpp
lib/qm-dsp/hmm/: hmm.c
lib/qm-dsp/maths/: MathAliases.h  MathUtilities.cpp
lib/reverb/: Reverb.cc  Reverb.h
lib/reverb/dsp/: IIR1.h  Sine.h
res/: schema.xml
src/: coreservices.cpp  coreservices.h  errordialoghandler.cpp  main.cpp  mixxx.rc.include.in  mixxxapplication.cpp  mixxxmainwindow.cpp  mixxxmainwindow.h
tools/: android_buildenv.sh  windows_buildenv.bat
(+99 files in other folders)
